--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <div class="pillset" id="colorSet">
             <div class="pill active" data-value="gold">Gold</div>
             <div class="pill" data-value="silver">Silver</div>
-            <div class="pill" data-value="copper">Copper</div>
+            <div class="pill" data-value="Bronze">Bronze</div>
             <div class="pill" data-value="obsidian">Obsidian</div>
             <div class="pill" data-value="ivory">Ivory</div>
           </div>
